--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 8080",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
@@ -14,6 +14,7 @@
     "@svgr/plugin-svgo": "^6.1.2",
     "highcharts": "^10.2.1",
     "highcharts-react-official": "^3.1.0",
+    "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "svgo": "^2.8.0",
