--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@svgr/core": "^6.1.2",
     "@svgr/plugin-jsx": "^6.1.2",
     "@svgr/plugin-svgo": "^6.1.2",
+    "@tanstack/react-table": "^8.7.9",
     "highcharts": "^10.2.1",
     "highcharts-react-official": "^3.1.0",
     "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "rxjs": "^7.6.0",
+    "sass": "^1.58.3",
     "svgo": "^2.8.0",
     "vite-plugin-react-svg": "^0.2.0"
   },
@@ -27,6 +30,6 @@
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
     "typescript": "^4.5.4",
-    "vite": "^2.8.0"
+    "vite": "^4.0.4"
   }
 }
