--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@svgr/plugin-jsx": "^6.1.2",
     "@svgr/plugin-svgo": "^6.1.2",
     "@tanstack/react-table": "^8.7.9",
+    "@types/jp-conversion": "^0.0.0",
     "highcharts": "^10.2.1",
     "highcharts-react-official": "^3.1.0",
+    "jp-conversion": "^0.0.7",
     "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
